# Morph

./: Cargo.toml  Morph Language Documentation.md  README  README.md
examples/: ghost_types.morph  hello.morph  solve.morph  types.morph
plans/: architecture.md  morph_vs_julia.md
src/: lib.rs  main.rs
src/ast/: mod.rs
src/cli/: mod.rs
src/interpreter/: environment.rs  mod.rs  value.rs
src/lexer/: mod.rs  token.rs  tokenizer.rs
src/parser/: mod.rs
src/types/: checker.rs  mod.rs
